z-index fixed for fullscreen bug in IE9/10

--- a/css/player.basic.css
+++ b/css/player.basic.css
@@ -116,6 +116,7 @@
 	position: fixed !important;
 	top: 0 !important;
 	left: 0 !important;
+	z-index: 100000;
 }
 
 .kit-player.is-playing-ad {
